0033019: Coding - get rid of unused classes